--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
     <header>
-        <a href="https://1891839413168.netlify.app/" target="_blank">
+        <a href="https://alvaroalmeidaronn.github.io/Pagina-1/" target="_blank">
             <div id="logo">
                 <img src="./imagens/logo.png" alt="nossa logo" >
             </div>
