--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6213266828465281"
         crossorigin="anonymous"></script>
-    <link rel="shortcut icon" href="../Pagina-1/Imagens/favcon.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="./Imagens/favcon.png" type="image/x-icon" />
 </head>
 
 <body>
@@ -17,7 +17,7 @@
     <header>
         <a href="https://294194191.netlify.app/" target="_blank">
             <div id="logo">
-                <img src="../Pagina-1/Imagens/favcon.png" alt="nossa logo">
+                <img src="./Imagens/favcon.png" alt="nossa logo">
             </div>
         </a>
     </header>
