--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
         <div class="books">
             <h3 class="book-title">
-                A Busca pelo Cálice de Azura
+                A Trama Oculta
             </h3>
 
             <div class="book-summary">
